--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,15 @@ Thumbs.db
 # Environment files
 *.env
 *.env.*
+-e 
+# Environment files
+*.env
+*.env.*
+-e 
+# Environment files
+*.env
+*.env.*
+-e 
+# Environment files
+*.env
+*.env.*
